--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-core:3.3.3"
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    testImplementation 'org.json:json:20180813'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.1"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.1"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
 }
